kubernetes/k3s-01/workloads/traefik/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.k3s-01.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: kube-system
          name: traefik-ipallowlist
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-certificate
